# dancher

./: .gitignore  .travis.yml  LICENSE  Procfile  README.md  cabal.config  dancher.cabal  data.sh  database.sql  package.json
app/: Main.hs
frontend/: .gitignore  bower.json  bundle-fast.sh  bundle-full.sh  package.json  webpack.config.js
frontend/src/: Main.purs
frontend/src/App/: Backend.purs  Config.js  Config.purs  Control.purs  Events.purs  Routes.purs  State.purs  Types.purs
frontend/src/App/View/: Homepage.purs  Layout.purs  Markup.purs  Topic.purs  TopicList.purs
frontend/static/: bundle.js  index.html  loading.css
frontend/support/: entry.js
frontend/test/: Arbitraries.purs  JsonRoundtripSpec.purs  Main.purs  RoutingSpec.purs
src/: Api.hs  Database.hs  Domain.hs  Lib.hs  Response.hs  Server.hs  Static.hs  Topic.hs  Topics.hs
src/Topic/: Api.hs  Controller.hs  Domain.hs  Repo.hs
