name:                dancher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Unisay/dancher#readme
license:             BSD3
license-file:        LICENSE
author:              Yuriy Lazarev
maintainer:          Yuriy.Lazarev@gmail.com
copyright:           Yuriy Lazarev
category:            application
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Topic
  ghc-options:         -Wall
  exposed-modules:     Server
                     , Topic
                     , Lib.Prelude
  other-modules:       Topic.Api
                     , Topic.Domain
                     , Topic.Repo
                     , Topic.Controller
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , text
                     , time
                     , servant-server
                     , transformers
                     , mtl
                     , attoparsec
                     , bytestring
                     , aeson
                     , aeson-injector
                     , wai
                     , lucid
                     , directory
                     , blaze-html
                     , blaze-markup
                     , containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable dancher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dancher
                     , protolude >= 0.1.6 && < 0.2
                     , warp
                     , wai
                     , wai-cors
                     , servant-server
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite dancher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dancher
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/Unisay/dancher
